@@ -5,6 +5,8 @@ Revision history for Perl module Math::Prime::Util::GMP
     [ADDED]
 
     - is_llr_prime(p)           For k*2^n-1, returns -1, 0, or 2
+    - lucasu(P, Q, k)           U_k for Lucas(P,Q)
+    - lucasv(P, Q, k)           V_k for Lucas(P,Q)
 
     [PERFORMANCE]
 
